--- a/horses.html
+++ b/horses.html
@@ -71,7 +71,7 @@
       <div class="sidebar">
         <!-- Sidebar user panel (optional) -->
         <!-- SidebarSearch Form -->
-        <!-- Sidebar Menu -->
+        <!-- Sidebar Menu uijyuiyui -->
         <nav class="mt-2">
           <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
             <!-- Add icons to the links using the .nav-icon class
