--- a/Modules/ViewPlan/ViewPlan.html
+++ b/Modules/ViewPlan/ViewPlan.html
@@ -5,7 +5,7 @@
 
     <div class="row">
       <div class="col-12">
-        <div class="card" ng-show="myVar">
+        <div class="card" ng-show="myVar==true">
           <div class="card-header">
             <div class="header_card">
               <h3 class="card-title">View Plan Details</h3>
@@ -45,9 +45,9 @@
                     <td><p class="pend_coloe  backgr_blue">Pending </p></td>
 
                     <td>
-                      <a ng-click="myVar1=false"><img src="dist/img/icon/view.png" class="viwe_iamge"></a>
+                      <!--<a ng-click="myVar1=false"><img src="dist/img/icon/view.png" class="viwe_iamge"></a>-->
 
-                      <a ng-click="myVar=false"><img src="dist/img/icons/audit.png" class="viwe_iamge"></a>
+                      <a ng-click="Asign()"><img src="dist/img/icons/audit.png" class="viwe_iamge"></a>
                     </td>
 
                   </tr>
@@ -63,9 +63,9 @@
                     <td><p class="pend_coloe  backgr_green">Approve </p></td>
 
                     <td>
-                      <a ng-click="myVar1=false"><img src="dist/img/icon/view.png" class="viwe_iamge"></a>
+                      <a ng-click="ViewPlan()"><img src="dist/img/icon/view.png" class="viwe_iamge"></a>
 
-                      <a ng-click="myVar=false"><img src="dist/img/icons/audit.png" class="viwe_iamge"></a>
+                      <a ng-click="Asign()"><img src="dist/img/icons/audit.png" class="viwe_iamge"></a>
                     </td>
 
                   </tr>
@@ -77,7 +77,7 @@
         </div>
         <!-- /.card -->
         <!-- /.card -->
-        <div class="card" ng-hide="myVar">
+        <div class="card" ng-show="myVar2==true">
           <div class="card-header">
             <div class="header_card">
               <h3 class="card-title">View Plan Details</h3>
@@ -125,10 +125,10 @@
           <div class="card-footer text-right">
 
             <button type="button" class="btn btn-primary" ng-click="assign()">Assign</button>
-            <button type="button" class="btn btn-default" data-dismiss="modal" ng-click="myVar=true" style="padding:10px;">Close</button>
+            <button type="button" class="btn btn-default" data-dismiss="modal" style="padding:10px;" ng-click="AsignClose()">Close</button>
           </div>
         </div>
-        <div class="card" ng-hide="myVar1">
+        <div class="card" ng-show="myVar1==true">
           <div class="card-header">
             <div class="header_card">
               <h3 class="card-title">View Plan Details</h3>
@@ -188,7 +188,7 @@
 
               <div class="col-sm-4">
                 <div class="form-group">
-                  <label class="form_label">Auditor</label>
+                  <label class="form_label">Auditor(Multiselect)</label>
                   <select class="form-control">
                     <option>Select</option>
                     <option>Auditor 1</option>
@@ -289,7 +289,7 @@
           <div class="card-footer">
 
             <button type="button" class="btn btn-primary" ng-click="submit()">Submit</button>
-            <button type="button" class="btn btn-default" data-dismiss="modal" ng-click="myVar1=true" style="padding:10px;">Close</button>
+            <button type="button" class="btn btn-default" data-dismiss="modal" ng-click="Close()" style="padding:10px;">Close</button>
           </div>
         </div>
       </div>
