commit all design changes

--- a/Modules/Audit/Audit.html
+++ b/Modules/Audit/Audit.html
@@ -7,7 +7,7 @@
           <div class="card-header">
             <div class="header_card">
               <h3 class="card-title">Audit Area Details</h3>
-              <a href="" ng-click="OpenAddForm()" class="btn btn-blue"> <i class="far fa-user mr-2" aria-hidden="true"></i>Add Influencer</a>
+              <a href="" ng-click="OpenAddForm()" class="btn btn-blue"> <img src="dist/img/icons/traffic-data.png" class="side_imgmaster mr-1">Add Audit Area</a>
             </div>
           </div>
           <!-- /.card-header -->
@@ -18,11 +18,24 @@
 
                   <th>Audit Area Name </th>
                   <th>Categories </th>
-                
+                  <th>Action</th>
+
 
                 </tr>
               </thead>
               <tbody>
+                <tr>
+                  <td>ABCCCCC</td>
+                  <td>Categories1</td>
+
+
+
+
+                  <td>
+                    <a><img src="dist/img/icons/document-editor.png" class="w_25"></a>
+                    <a><img src="dist/img/icons/delete.png" class="w_25"></a>
+                  </td>
+                </tr>
               </tbody>
             </table>
           </div>
@@ -56,7 +69,7 @@
                   </div>
 
                 </div>
-                
+
                 <div class="col-sm-4">
 
 
