--- a/Modules/Regulation/Regulation.html
+++ b/Modules/Regulation/Regulation.html
@@ -7,7 +7,7 @@
           <div class="card-header">
             <div class="header_card">
               <h3 class="card-title">Regulation Master</h3>
-              <a href="" ng-click="OpenAddForm()" class="btn btn-blue"> <i class="far fa-user mr-2" aria-hidden="true"></i>Add Influencer</a>
+              <a href="" ng-click="OpenAddForm()" class="btn btn-blue"> <img src="dist/img/icons/gdpr.png" class="side_imgmaster mr-1">Add Regulation</a>
             </div>
           </div>
           <!-- /.card-header -->
@@ -21,11 +21,24 @@
                   <th>Categories</th>
                   <th>Audit Area</th>
                   <th>Regulation Creation Date</th>
+                  <th>Action</th>
 
 
                 </tr>
               </thead>
               <tbody>
+                <tr>
+                  <td>Arvind</td>
+                  <td>12345</td>
+                  <td>Categories1</td>
+                  <td>ABCCCC</td>
+                  <td>12-2-2022</td>
+
+                  <td>
+                    <a><img src="dist/img/icons/document-editor.png" class="w_25"></a>
+                    <a><img src="dist/img/icons/delete.png" class="w_25"></a>
+                  </td>
+                </tr>
               </tbody>
             </table>
           </div>
