--- a/Modules/VendorMaster/VendorMaster.html
+++ b/Modules/VendorMaster/VendorMaster.html
@@ -7,7 +7,7 @@
           <div class="card-header">
             <div class="header_card">
               <h3 class="card-title">Vendor Master</h3>
-              <a href="" ng-click="OpenAddForm()" class="btn btn-blue"> <i class="far fa-user mr-2" aria-hidden="true"></i>Add Influencer</a>
+              <a href="" ng-click="OpenAddForm()" class="btn btn-blue">   <img src="dist/img/icons/owner copy.png" class="side_imgmaster mr-1">Add Vendor</a>
             </div>
           </div>
           <!-- /.card-header -->
@@ -21,11 +21,22 @@
                   <th>Image</th>
                   <th>Vendor Email</th>
                   <th>Location </th>
+                  <th>Action</th>
 
                 </tr>
               </thead>
               <tbody>
-                
+                <tr>
+                  <td>Arvind</td>
+                  <td>12345</td>
+                  <td></td>
+                  <td>arvin@gmial.com</td>
+                  <td>abchshhhss</td>
+                  <td>
+                    <a><img src="dist/img/icons/document-editor.png" class="w_25"></a>
+                    <a><img src="dist/img/icons/delete.png" class="w_25"></a>
+                  </td>
+                </tr>
               </tbody>
             </table>
           </div>
@@ -36,7 +47,7 @@
       </div>
       <!-- /.col -->
     </div>
-    <div class="row" >
+    <div class="row">
       <div class="col-md-12">
 
         <div class="card card-default">
@@ -89,41 +100,43 @@
 
                 </div>
 
+                <div class="col-sm-8 mt-4">
+                  <table id="example2" class="table table-bordered table-hover">
 
+                    <thead>
+                      <tr class="now_rap text-center sticky_header">
+                        <th>S.No</th>
+                        <th>Location  </th>
+                        <th>Select </th>
+
+
+
+                      </tr>
+                    </thead>
+                    <tbody>
+                      <tr class="tbody_data">
+                        <td>1</td>
+                        <td>Location 1</td>
+
+                        <td><input type="checkbox"></td>
+
+
+                      </tr>
+                      <tr class="tbody_data">
+
+                        <td>2</td>
+                        <td>Location 2</td>
+
+                        <td><input type="checkbox"></td>
+
+
+                      </tr>
+                    </tbody>
+                  </table>
+                </div>
 
               </div>
-              <table id="example2" class="table table-bordered table-hover">
 
-                <thead>
-                  <tr class="now_rap text-center sticky_header">
-                    <th>S.No</th>
-                    <th>Location  </th>
-                    <th>Select </th>
-
-
-
-                  </tr>
-                </thead>
-                <tbody>
-                  <tr class="tbody_data">
-                    <td>1</td>
-                    <td>Location 1</td>
-
-                    <td><input type="checkbox"></td>
-
-
-                  </tr>
-                  <tr class="tbody_data">
-
-                    <td>2</td>
-                    <td>Location 2</td>
-
-                    <td><input type="checkbox"></td>
-
-
-                  </tr>
-                </tbody>
-              </table>
 
             </div>
 
@@ -137,8 +150,8 @@
 
       </div>
     </div>
-    
-   
+
+
 
   </div>
 </section>
