--- a/Modules/ViewPlan/ViewPlan.html
+++ b/Modules/ViewPlan/ViewPlan.html
@@ -141,8 +141,8 @@
               <div class="col-sm-4">
                 <div class="form-group">
                   <label class="form_label">Business Unit </label>
-                  <select class="form-control">
-                    <option>Select</option>
+                  <select class="form-control" disabled>
+
                     <option>Business Unit 1</option>
                     <option>Business Unit 2</option>
                     <option>Business Unit 3</option>
@@ -156,7 +156,7 @@
 
                 <div class="form-group">
                   <label class="form_label">Planned Start Date</label>
-                  <input type="date" class="form-control inputbox_css">
+                  <input type="date" class="form-control inputbox_css" disabled>
                 </div>
 
               </div>
@@ -166,7 +166,7 @@
 
                 <div class="form-group">
                   <label class="form_label">Planned End Date</label>
-                  <input type="date" class="form-control inputbox_css">
+                  <input type="date" class="form-control inputbox_css" disabled>
                 </div>
 
               </div>
@@ -176,8 +176,8 @@
                   <label class="form_label">
                     Auditee
                   </label>
-                  <select class="form-control">
-                    <option>Select</option>
+                  <select class="form-control" disabled>
+
                     <option>Auditee 1</option>
                     <option>Auditee 2</option>
                     <option>Auditee 3</option>
@@ -188,9 +188,9 @@
 
               <div class="col-sm-4">
                 <div class="form-group">
-                  <label class="form_label">Auditor(Multiselect)</label>
-                  <select class="form-control">
-                    <option>Select</option>
+                  <label class="form_label">Auditor</label>
+                  <select class="form-control" disabled>
+
                     <option>Auditor 1</option>
                     <option>Auditort 2</option>
                     <option>Auditor 3</option>
@@ -205,8 +205,7 @@
                   <label class="form_label">
                     Additional MSIL email
                   </label>
-                  <input type="email" class="form-control inputbox_css" ng-model="driverObj.DriverName"
-                         placeholder="Enter Driver Name" maxlength="200">
+                  <input type="email" class="form-control inputbox_css" placeholder="xyz@gmail.com" disabled>
                 </div>
               </div>
               <div class="col-sm-4">
@@ -214,8 +213,8 @@
                   <label class="form_label">
                     VSA users
                   </label>
-                  <select class="form-control">
-                    <option>Select</option>
+                  <select class="form-control" disabled>
+
                     <option> VSA users 1</option>
                     <option> VSA users 2</option>
                     <option> VSA users 3</option>
@@ -228,8 +227,8 @@
                   <label class="form_label">
                     Locations
                   </label>
-                  <select class="form-control">
-                    <option>Select</option>
+                  <select class="form-control" disabled>
+
                     <option> Locations 1</option>
                     <option> Locations 2</option>
                     <option> Locations 3</option>
@@ -244,8 +243,7 @@
                     Additional Auditee Email
 
                   </label>
-                  <input type="email" class="form-control inputbox_css" ng-model="driverObj.DriverName"
-                         placeholder="Enter Driver Name" maxlength="200">
+                  <input type="email" class="form-control inputbox_css" placeholder="xyz@gmail.com" disabled>
                 </div>
               </div>
 
@@ -255,8 +253,8 @@
                     Other Location
 
                   </label>
-                  <select class="form-control">
-                    <option>Select</option>
+                  <select class="form-control" disabled>
+
                     <option>  Other Location 1</option>
                     <option>  Other Location 2</option>
                     <option>  Other Location 3</option>
@@ -268,18 +266,16 @@
               <div class="col-sm-4">
                 <div class="form-group">
                   <label class="form_label">
-                    PPT & PDF Upload Feature
+                    Upload File
 
                   </label>
-                  <label for="exampleInputFile">File input</label>
+
                   <div class="input-group">
                     <div class="custom-file">
-                      <input type="file" class="custom-file-input" id="exampleInputFile">
+                      <input type="file" class="custom-file-input" id="exampleInputFile" disabled>
                       <label class="custom-file-label" for="exampleInputFile">Choose file</label>
                     </div>
-                    <div class="input-group-append">
-                      <span class="input-group-text">Upload</span>
-                    </div>
+
                   </div>
                 </div>
               </div>
