--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                     </p>
                   </a>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item" ng-show="RoleName=='Admin'">
                   <a href="#/ViewPlan" class="nav-link">
                     <img src="dist/img/icons/view.png" class="side_img">
                     <p>
@@ -140,7 +140,7 @@
                     </p>
                   </a>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item" ng-show="RoleName=='Vender'">
                   <a href="#/PendingPlan" class="nav-link">
                     <img src="dist/img/icons/planning.png" class="side_img">
                     <p>
