--- a/Modules/VendorMaster/VendorMaster.html
+++ b/Modules/VendorMaster/VendorMaster.html
@@ -107,7 +107,7 @@
                       <tr class="now_rap text-center sticky_header">
                         <th>S.No</th>
                         <th>Location  </th>
-                        <th>Select </th>
+                        <th>Action </th>
 
 
 
@@ -116,18 +116,23 @@
                     <tbody>
                       <tr class="tbody_data">
                         <td>1</td>
-                        <td>Location 1</td>
+                        <td><input type="text" class="form-control"></td>
+                        <td>
+                          <button class="btn btn-primary">+</button>
+                          <button class="btn btn-danger">-</button>
+                        </td>
 
-                        <td><input type="checkbox"></td>
 
 
                       </tr>
                       <tr class="tbody_data">
+                        <td>1</td>
+                        <td><input type="text" class="form-control"></td>
+                        <td>
+                          <button class="btn btn-primary">+</button>
+                          <button class="btn btn-danger">-</button>
+                        </td>
 
-                        <td>2</td>
-                        <td>Location 2</td>
-
-                        <td><input type="checkbox"></td>
 
 
                       </tr>
