--- a/Modules/CreatePlan/CreatePlan.html
+++ b/Modules/CreatePlan/CreatePlan.html
@@ -2,7 +2,7 @@
   <div class="container-fluid">
 
     
-    <div class="row">
+    <div class="row" ng-show="Plan==true">
       <div class="col-md-12">
 
         <div class="card card-default">
@@ -152,7 +152,7 @@
 
             <div class="card-footer">
               <button ng-click="AddData()" class="btn btn-primary">Submit</button>
-              <button ng-click="init()" class="btn btn-default" style="padding:10px;">Back</button>
+              <button ng-click="Back()" class="btn btn-default" style="padding:10px;">Back</button>
             </div>
           </form>
         </div>
