--- a/Modules/ViewPlan/ViewPlan.html
+++ b/Modules/ViewPlan/ViewPlan.html
@@ -45,9 +45,9 @@
                     <td><p class="pend_coloe  backgr_blue">Pending </p></td>
 
                     <td>
-                      <!--<a ng-click="myVar1=false"><img src="dist/img/icon/view.png" class="viwe_iamge"></a>-->
+                      <a ng-click="ViewPlan()"><img src="dist/img/icon/view.png" class="viwe_iamge"></a>
 
-                      <a ng-click="Asign()"><img src="dist/img/icons/audit.png" class="viwe_iamge"></a>
+                      <!--<a ng-click="Asign()"><img src="dist/img/icons/audit.png" class="viwe_iamge"></a>-->
                     </td>
 
                   </tr>
