--- a/Modules/EmployeeMaster/EmployeeMaster.html
+++ b/Modules/EmployeeMaster/EmployeeMaster.html
@@ -1,13 +1,13 @@
 <section class="content pt-2">
   <div class="container-fluid">
 
-    <div class="row">
+    <div class="row" ng-show="EmpMaster==true">
       <div class="col-12">
         <div class="card">
           <div class="card-header">
             <div class="header_card">
               <h3 class="card-title">Employee Master</h3>
-              <a href="" ng-click="OpenAddForm()" class="btn btn-blue"> <img src="dist/img/icons/group.png" class="side_imgmaster mr-1">Add Employee</a>
+              <a href="" ng-click="AddEmployee()" class="btn btn-blue"> <img src="dist/img/icons/group.png" class="side_imgmaster mr-1">Add Employee</a>
             </div>
           </div>
           <!-- /.card-header -->
@@ -32,7 +32,7 @@
                 <td>12-2-2022</td>
 
                 <td>
-                  <a><img src="dist/img/icons/document-editor.png" class="w_25"></a>
+                  <a ng-click="AddEmployee()"><img src="dist/img/icons/document-editor.png" class="w_25"></a>
                   <a><img src="dist/img/icons/delete.png" class="w_25"></a>
                 </td>
               </tr>
@@ -47,7 +47,7 @@
       </div>
       <!-- /.col -->
     </div>
-    <div class="row">
+    <div class="row" ng-show="EmpMasterDetail==true">
       <div class="col-md-12">
 
         <div class="card card-default">
@@ -113,7 +113,7 @@
 
             <div class="card-footer">
               <button ng-click="AddData()" class="btn btn-primary">Save</button>
-              <button ng-click="init()" class="btn btn-default" style="padding:10px;">Close</button>
+              <button ng-click="Close()" class="btn btn-default" style="padding:10px;">Close</button>
             </div>
           </form>
         </div>
