--- a/Modules/PendingPlan/PendingPlan.html
+++ b/Modules/PendingPlan/PendingPlan.html
@@ -5,15 +5,15 @@
 
     <div class="row">
       <div class="col-12">
-        <div class="card" ng-show="pendiview">
+        <div class="card">
           <div class="card-header">
-            <div class="header_card">
+            <div class="header_card"ng-show="Pending==true">
               <h3 class="card-title">Pending Plan Details</h3>
 
             </div>
           </div>
           <!-- /.card-header -->
-          <div class="card-body">
+          <div class="card-body" ng-show="Pending==true">
             <div class="table-responsive max_hei_table">
               <table id="example2" class="table table-bordered table-hover">
 
@@ -45,7 +45,7 @@
                     <td><p class="pend_coloe backgr_blue">Pending </p></td>
 
                     <td>
-                      <a data-toggle="modal" data-target="#exampleModal"><img src="dist/img/icon/view.png" class="viwe_iamge"></a>
+                      <a ng-click="PendingPlan()" data-toggle="modal" data-target="#exampleModal"><img src="dist/img/icon/view.png" class="viwe_iamge"></a>
                     </td>
 
 
@@ -62,7 +62,7 @@
                     <td><p class="pend_coloe backgr_blue">Pending </p></td>
 
                     <td>
-                      <a data-toggle="modal" data-target="#exampleModal"><img src="dist/img/icon/view.png" class="viwe_iamge"></a>
+                      <a ng-click="PendingPlan()" data-toggle="modal" data-target="#exampleModal"><img src="dist/img/icon/view.png" class="viwe_iamge"></a>
                     </td>
 
                   </tr>
@@ -74,7 +74,7 @@
         </div>
         <!-- /.card -->
         <!-- /.card -->
-        <div class="card" ng-hide="pendiview">
+        <div class="card" ng-show="PendingPlanDetail==true">
           <div class="card-header">
             <div class="header_card">
               <h3 class="card-title">Pending Plan Details</h3>
