--- a/Modules/VendorMaster/VendorMaster.html
+++ b/Modules/VendorMaster/VendorMaster.html
@@ -1,13 +1,13 @@
 <section class="content pt-2">
   <div class="container-fluid">
 
-    <div class="row">
+    <div class="row" ng-show="Vender==true">
       <div class="col-12">
         <div class="card">
           <div class="card-header">
             <div class="header_card">
               <h3 class="card-title">Vendor Master</h3>
-              <a href="" ng-click="OpenAddForm()" class="btn btn-blue">   <img src="dist/img/icons/owner copy.png" class="side_imgmaster mr-1">Add Vendor</a>
+              <a ng-click="AddVender()" class="btn btn-blue">   <img src="dist/img/icons/owner copy.png" class="side_imgmaster mr-1">Add Vendor</a>
             </div>
           </div>
           <!-- /.card-header -->
@@ -33,7 +33,7 @@
                   <td>arvin@gmial.com</td>
                   <td>abchshhhss</td>
                   <td>
-                    <a><img src="dist/img/icons/document-editor.png" class="w_25"></a>
+                    <a ng-click="AddVender()"><img src="dist/img/icons/document-editor.png" class="w_25"></a>
                     <a><img src="dist/img/icons/delete.png" class="w_25"></a>
                   </td>
                 </tr>
@@ -47,7 +47,7 @@
       </div>
       <!-- /.col -->
     </div>
-    <div class="row">
+    <div class="row" ng-show="VenderDetail==true">
       <div class="col-md-12">
 
         <div class="card card-default">
@@ -147,7 +147,7 @@
 
             <div class="card-footer">
               <button ng-click="AddData()" class="btn btn-primary">Save</button>
-              <button ng-click="init()" class="btn btn-default" style="padding:10px;">Close</button>
+              <button ng-click="Close()" class="btn btn-default" style="padding:10px;">Close</button>
             </div>
           </form>
         </div>
