--- a/Modules/EmployeeMaster/EmployeeMaster.html
+++ b/Modules/EmployeeMaster/EmployeeMaster.html
@@ -66,7 +66,7 @@
                   <div class="form-group">
                     <label class="form_label">Employee Name</label>
                     <input type="text" class="form-control inputbox_css" ng-model="influencerObj.FirstName"
-                           placeholder="Enter Driver Name" maxlength="200">
+                           placeholder="Enter Employee Name" maxlength="200">
                   </div>
 
                 </div>
@@ -76,7 +76,7 @@
                   <div class="form-group">
                     <label class="form_label">Employee Code</label>
                     <input type="text" class="form-control inputbox_css" ng-model="influencerObj.FirstName"
-                           placeholder="Enter Driver Name" maxlength="200">
+                           placeholder="Enter Employee Name" maxlength="200">
                   </div>
 
                 </div>
