--- a/Modules/ManageAudit/ManageAudit.html
+++ b/Modules/ManageAudit/ManageAudit.html
@@ -133,20 +133,11 @@ Hypothetical City, Kodaikanal" maxlength="200" disabled>
                 <div class="form-group">
                   <label class="form_label">Part Name</label>
                   <input type="text" class="form-control inputbox_css" ng-model="influencerObj.FirstName"
-                         placeholder="Enter Driver Name" maxlength="200">
+                         placeholder="Enter Part Name" maxlength="200">
                 </div>
 
               </div>
-              <div class="col-sm-4">
-
-
-                <div class="form-group">
-                  <label class="form_label">Part Name</label>
-                  <input type="text" class="form-control inputbox_css" ng-model="influencerObj.FirstName"
-                         placeholder="Enter Driver Name" maxlength="200">
-                </div>
-
-              </div>
+            
               <div class="col-sm-4">
 
 
@@ -190,7 +181,7 @@ Hypothetical City, Kodaikanal" maxlength="200" disabled>
                       <th scope="row">1</th>
                       <td>
                         <input type="text" class="form-control inputbox_css" ng-model="influencerObj.FirstName"
-                               placeholder="Enter Driver Name" maxlength="200">
+                               placeholder="Enter Vendor Attendees" maxlength="200">
                       </td>
                       <td>
                         <button class="btn btn-primary">+</button>
