--- a/Modules/Regulation/Regulation.html
+++ b/Modules/Regulation/Regulation.html
@@ -77,7 +77,7 @@
                   <div class="form-group">
                     <label class="form_label">Regulation Code</label>
                     <input type="text" class="form-control inputbox_css" ng-model="influencerObj.FirstName"
-                           placeholder="Enter Driver Name" maxlength="200">
+                           placeholder="Enter Regulation Code" maxlength="200">
                   </div>
 
                 </div>
