--- a/Modules/VendorMaster/VendorMaster.html
+++ b/Modules/VendorMaster/VendorMaster.html
@@ -68,7 +68,7 @@
                   <div class="form-group">
                     <label class="form_label">Vendor Name</label>
                     <input type="text" class="form-control inputbox_css" ng-model="influencerObj.FirstName"
-                           placeholder="Enter Driver Name" maxlength="200">
+                           placeholder="Enter Vendor Name" maxlength="200">
                   </div>
 
                 </div>
@@ -78,7 +78,7 @@
                   <div class="form-group">
                     <label class="form_label">Vendor Code</label>
                     <input type="text" class="form-control inputbox_css" ng-model="influencerObj.FirstName"
-                           placeholder="Enter Driver Name" maxlength="200">
+                           placeholder="Enter Vendor Code" maxlength="200">
                   </div>
 
                 </div>
@@ -88,7 +88,7 @@
                   <div class="form-group">
                     <label class="form_label">Vendor Email</label>
                     <input type="text" class="form-control inputbox_css" ng-model="influencerObj.FirstName"
-                           placeholder="Enter Driver Name" maxlength="200">
+                           placeholder="Enter Vendor Email" maxlength="200">
                   </div>
 
                 </div>
