--- a/Modules/Audit/Audit.html
+++ b/Modules/Audit/Audit.html
@@ -62,7 +62,7 @@
                   <div class="form-group">
                     <label class="form_label">Audit Area Name</label>
                     <input type="text" class="form-control inputbox_css" ng-model="influencerObj.FirstName"
-                           placeholder="Enter Driver Name" maxlength="200">
+                           placeholder="Enter Audit Area Name" maxlength="200">
                   </div>
 
                 </div>
