--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
               </a>
               <ul class="nav nav-treeview">
                 <li class="nav-item" ng-show="RoleName=='Admin'">
-                  <a href="#/CreatePlan" class="nav-link">
+                  <a href="#/VendorMaster" class="nav-link">
                     <img src="dist/img/icons/lightbulb.png" class="side_img">
                     <p>
                       Vendor Master
