--- a/Modules/EmployeeMaster/EmployeeMaster.html
+++ b/Modules/EmployeeMaster/EmployeeMaster.html
@@ -18,7 +18,7 @@
 
                   <th>Employee Name </th>
                   <th>Employee Code</th>
-                  <th>Employee Roll</th>
+                  <th>Employee Role</th>
                   <th>Employee Creation Date</th>
                   <th>Action</th>
 
@@ -76,7 +76,7 @@
                   <div class="form-group">
                     <label class="form_label">Employee Code</label>
                     <input type="text" class="form-control inputbox_css" ng-model="influencerObj.FirstName"
-                           placeholder="Enter Employee Name" maxlength="200">
+                           placeholder="Enter Employee Code" maxlength="200">
                   </div>
 
                 </div>
@@ -84,7 +84,7 @@
 
 
                   <div class="form-group">
-                    <label class="form_label">Employee Roll</label>
+                    <label class="form_label">Employee Role</label>
                     <select class="form-control">
                       <option>Select</option>
                       <option>Employee 1</option>
@@ -94,7 +94,7 @@
                   </div>
 
                 </div>
-                <div class="col-sm-4">
+                <!--<div class="col-sm-4">
 
 
                   <div class="form-group">
@@ -102,7 +102,7 @@
                     <input type="date" class="form-control inputbox_css">
                   </div>
 
-                </div>
+                </div>-->
 
 
 
