--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             <div class="dropdown-item d-flex justif_space_betwen">
               <div class="sing_out_button">
                 <img src="dist/img/Icons/padlock.png" class="pass_change">
-                <a href="">Sign Out</a>
+                <a href="login.html">Sign Out</a>
               </div>
               <div class="sing_out_button">
                 <img src="dist/img/Icons/padlock.png" class="pass_change">
