--- a/Modules/Audit/Audit.html
+++ b/Modules/Audit/Audit.html
@@ -99,8 +99,8 @@
             </div>
 
             <div class="card-footer">
-              <button ng-click="AddData()" class="btn btn-primary">Save</button>
-              <button ng-click="init()" class="btn btn-default">Close</button>
+              <button ng-click="Save()" class="btn btn-primary">Save</button>
+              <button ng-click="Close()" class="btn btn-default">Close</button>
             </div>
           </form>
         </div>
