--- a/Modules/ViewPlan/ViewPlan.html
+++ b/Modules/ViewPlan/ViewPlan.html
@@ -285,7 +285,7 @@
           <!-- /.card-body -->
           <div class="card-footer">
 
-            <button type="button" class="btn btn-primary" ng-click="submit()">Submit</button>
+            <button type="button" class="btn btn-primary" ng-click="Submit()">Submit</button>
             <button type="button" class="btn btn-default" data-dismiss="modal" ng-click="Close()" style="padding:10px;">Close</button>
           </div>
         </div>
