--- a/Modules/Audit/Audit.html
+++ b/Modules/Audit/Audit.html
@@ -25,8 +25,37 @@
               </thead>
               <tbody>
                 <tr>
-                  <td>ABCCCCC</td>
-                  <td>Categories1</td>
+                  <td>Regarding implementation rule of production preparation </td>
+                  <td>Production preparation</td>
+
+                  <td>
+                    <a ng-click="AddAuditArea()"><img src="dist/img/icons/document-editor.png" class="w_25"></a>
+                    <a><img src="dist/img/icons/delete.png" class="w_25"></a>
+                  </td>
+                </tr>
+
+                <tr>
+                  <td>Regarding management /implementation by production preparation plan/report (master plan) </td>
+                  <td>Production preparation </td>
+
+                  <td>
+                    <a ng-click="AddAuditArea()"><img src="dist/img/icons/document-editor.png" class="w_25"></a>
+                    <a><img src="dist/img/icons/delete.png" class="w_25"></a>
+                  </td>
+                </tr>
+                <tr>
+                  <td>Regarding implementation rule of production preparation </td>
+                  <td>Standards management</td>
+
+                  <td>
+                    <a ng-click="AddAuditArea()"><img src="dist/img/icons/document-editor.png" class="w_25"></a>
+                    <a><img src="dist/img/icons/delete.png" class="w_25"></a>
+                  </td>
+                </tr>
+
+                <tr>
+                  <td>Regarding management /implementation by production preparation plan/report (master plan) </td>
+                  <td>Supplier control </td>
 
                   <td>
                     <a ng-click="AddAuditArea()"><img src="dist/img/icons/document-editor.png" class="w_25"></a>
@@ -74,8 +103,16 @@
                     <label class="form_label">Categories</label>
                     <select class="form-control">
                       <option>Select</option>
-                      <option>Categories 1</option>
-                      <option>Categories  2</option>
+                      <option>Education and training</option>
+                      <option>Supplier control</option>
+                      <option>
+                        Regulation for
+                        initial production control
+                      </option>
+                      <option>
+                        Regulation for
+                        initial production control
+                      </option>
 
                     </select>
                   </div>
