--- a/Modules/Regulation/Regulation.html
+++ b/Modules/Regulation/Regulation.html
@@ -88,8 +88,16 @@
                     <label class="form_label">Categories</label>
                     <select class="form-control">
                       <option>Select</option>
-                      <option>Employee 1</option>
-                      <option>Employee  2</option>
+                      <option>Education and training</option>
+                      <option>Supplier control</option>
+                      <option>
+                        Regulation for
+                        initial production control
+                      </option>
+                      <option>
+                        Regulation for
+                        initial production control
+                      </option>
 
                     </select>
                   </div>
