--- a/Modules/ManageAudit/ManageAudit.html
+++ b/Modules/ManageAudit/ManageAudit.html
@@ -547,7 +547,7 @@ Hypothetical City, Kodaikanal" maxlength="200" disabled>
                             </div><!--row end-->
                           </div>
                           <div class="card-footer">
-                            <button ng-click="AddData()" class="btn btn-primary">Save as deaft</button>
+                            <button ng-click="AddData()" class="btn btn-primary">Save as draft</button>
                             <button ng-click="init()" class="btn btn-success">Submit</button>
                           </div>
                         </div>
@@ -611,7 +611,7 @@ Hypothetical City, Kodaikanal" maxlength="200" disabled>
                             </div><!--row end-->
                           </div>
                           <div class="card-footer">
-                            <button ng-click="AddData()" class="btn btn-primary">Save as deaft</button>
+                            <button ng-click="AddData()" class="btn btn-primary">Save as draft</button>
                             <button ng-click="init()" class="btn btn-success">Submit</button>
                           </div>
                         </div>
@@ -678,7 +678,7 @@ Hypothetical City, Kodaikanal" maxlength="200" disabled>
                             </div><!--row end-->
                           </div>
                           <div class="card-footer">
-                            <button ng-click="AddData()" class="btn btn-primary">Save as deaft</button>
+                            <button ng-click="AddData()" class="btn btn-primary">Save as draft</button>
                             <button ng-click="init()" class="btn btn-success">Submit</button>
                           </div>
                         </div>
@@ -749,7 +749,7 @@ Hypothetical City, Kodaikanal" maxlength="200" disabled>
                             </div><!--row end-->
                           </div>
                           <div class="card-footer">
-                            <button ng-click="AddData()" class="btn btn-primary">Save as deaft</button>
+                            <button ng-click="AddData()" class="btn btn-primary">Save as draft</button>
                             <button ng-click="init()" class="btn btn-success">Submit</button>
                           </div>
                         </div>
@@ -817,7 +817,7 @@ Hypothetical City, Kodaikanal" maxlength="200" disabled>
                             </div><!--row end-->
                           </div>
                           <div class="card-footer">
-                            <button ng-click="AddData()" class="btn btn-primary">Save as deaft</button>
+                            <button ng-click="AddData()" class="btn btn-primary">Save as draft</button>
                             <button ng-click="init()" class="btn btn-success">Submit</button>
                           </div>
                         </div>
